; ModuleID = '/home/carl/AnghaBench/sway/sway/config/extr_seat.c_copy_seat_config.c'
source_filename = "/home/carl/AnghaBench/sway/sway/config/extr_seat.c_copy_seat_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seat_config = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.seat_config* @copy_seat_config(%struct.seat_config* %0) #0 {
  %2 = alloca %struct.seat_config*, align 8
  %3 = alloca %struct.seat_config*, align 8
  %4 = alloca %struct.seat_config*, align 8
  store %struct.seat_config* %0, %struct.seat_config** %3, align 8
  %5 = load %struct.seat_config*, %struct.seat_config** %3, align 8
  %6 = getelementptr inbounds %struct.seat_config, %struct.seat_config* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.seat_config* @new_seat_config(i32 %7)
  store %struct.seat_config* %8, %struct.seat_config** %4, align 8
  %9 = load %struct.seat_config*, %struct.seat_config** %4, align 8
  %10 = icmp eq %struct.seat_config* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store %struct.seat_config* null, %struct.seat_config** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load %struct.seat_config*, %struct.seat_config** %4, align 8
  %14 = load %struct.seat_config*, %struct.seat_config** %3, align 8
  %15 = call i32 @merge_seat_config(%struct.seat_config* %13, %struct.seat_config* %14)
  %16 = load %struct.seat_config*, %struct.seat_config** %4, align 8
  store %struct.seat_config* %16, %struct.seat_config** %2, align 8
  br label %17

17:                                               ; preds = %12, %11
  %18 = load %struct.seat_config*, %struct.seat_config** %2, align 8
  ret %struct.seat_config* %18
}

declare dso_local %struct.seat_config* @new_seat_config(i32) #1

declare dso_local i32 @merge_seat_config(%struct.seat_config*, %struct.seat_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
